force-app/main/default/objects/Engineering_Machine__c/Engineering_Machine__c.object-meta.xml
<CustomObject>
    <label>Engineering Machine</label>
    <nameField>
        <displayFormat>Machine-{0000}</displayFormat>
        <label>Engineering Machine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engineering_Machines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>