force-app/main/default/objects/Engineering_Machine__c/fields/available_status__c.field-meta.xml
<CustomField>
    <fullName>available_status__c</fullName>
    <label>available status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>available</fullName>
            </value>
            <value>
                <fullName>using in project</fullName>
            </value>
            <value>
                <fullName>in repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>