force-app/main/default/objects/Engineering_Machine__c/fields/Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Machine_Name__c</fullName>
    <label>Machine Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>