force-app/main/default/objects/Engineering_Machine__c/fields/Mining_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Mining_Project_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mining Project Id</label>
    <referenceTo>Mining_Project_Id__c</referenceTo>
    <relationshipLabel>Engineering_Machines</relationshipLabel>
    <relationshipName>Engineering_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>