force-app/main/default/objects/Engineering_Machine__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <label>model</label>
    <type>TextArea</type>
</CustomField>