force-app/main/default/objects/Engineering_Machine__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>